apps/base/seedbox/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    spec:
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:2.7.3
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: config-storage
              mountPath: /app/config
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: jellyseerr-longhorn
